add: "new API Dismissed employees, the returned object is wrapped in Optional" fix: "the List collection has been replaced with a Map and other improvements"